minor fix to rotating brand image overlapping with home navbar tab

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,7 +33,7 @@
   }
 
   #nav-bootstrap-overrides .navbar-brand {
-    padding: 0px 0px 0px 5px;
+    padding: 0px 10px 0px 5px;
     margin: 0;
   }
 
